--- a/store/templates/store/head.html
+++ b/store/templates/store/head.html
@@ -22,6 +22,8 @@
     <link type="text/css" rel="stylesheet" href="{% static 'css/nouislider.min.css' %}"/>
 
     <!-- Font Awesome Icon -->
+    {% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" /> {% endcomment %}
+
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
     <!-- Custom stlylesheet -->
