--- a/store/templates/store/header.html
+++ b/store/templates/store/header.html
@@ -59,7 +59,7 @@
                             <a href="#">
                                 <i class="fa fa-heart-o"></i>
                                 <span>Your Wishlist</span>
-                                <div class="qty">2</div>
+                                <div class="qty">{{ wishlist_items_count }}</div>
                             </a>
                         </div>
                         <!-- /Wishlist -->
@@ -69,7 +69,7 @@
                             <a >
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>Your Cart</span>
-                                <div class="qty">3</div>
+                                <div class="qty">{{cart_items_count}}</div>
                             </a>
                             
                         </div>
