--- a/store/templates/store/newsletter.html
+++ b/store/templates/store/newsletter.html
@@ -7,9 +7,17 @@
             <div class="col-md-12">
                 <div class="newsletter">
                     <p>Sign Up for the <strong>NEWSLETTER</strong></p>
-                    <form>
-                        <input class="input" type="email" placeholder="Enter Your Email">
-                        <button class="newsletter-btn"><i class="fa fa-envelope"></i> Subscribe</button>
+                    {% comment %} {% if messages %}
+                        <div class="messages">
+                            {% for message in messages %}
+                                <div class="message">{{ message }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %} {% endcomment %}
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        <input class="input" type="email" name="email" placeholder="Enter Your Email">
+                        <button class="newsletter-btn" type="submit"><i class="fa fa-envelope"></i> Subscribe</button>
                     </form>
                     <ul class="newsletter-follow">
                         <li>
