--- a/store/templates/store/header.html
+++ b/store/templates/store/header.html
@@ -4,6 +4,15 @@
 <header>
     <!-- TOP HEADER -->
     <div id="top-header">
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
         <div class="container">
             <ul class="header-links pull-left">
                 <a href="mailto:"></a>
@@ -35,45 +44,33 @@
                 </div>
                 <!-- /LOGO -->
 
-                <!-- SEARCH BAR -->
-                <div class="col-md-6">
-                    <div class="header-search">
-                        <form>
-                            <select class="input-select">
-                                <!-- <option value="0">All Categories</option>
-                                <option value="1">Category 01</option>
-                                <option value="1">Category 02</option> -->
-                            </select>
-                            <input class="input" placeholder="Search here">
-                            <button class="search-btn">Search</button>
-                        </form>
-                    </div>
-                </div>
-                <!-- /SEARCH BAR -->
+                {% include 'store/search.html' %}
+
 
                 <!-- ACCOUNT -->
                 <div class="col-md-3 clearfix">
                     <div class="header-ctn">
                         <!-- Wishlist -->
                         <div>
-                            <a href="#">
+                            <a href="./wishlist.html">
                                 <i class="fa fa-heart-o"></i>
                                 <span>Your Wishlist</span>
                                 <div class="qty">{{ wishlist_items_count }}</div>
                             </a>
                         </div>
                         <!-- /Wishlist -->
-
                         <!-- Cart -->
                         <div class="dropdown">
-                            <a >
+                            <a href="/">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>Your Cart</span>
-                                <div class="qty">{{cart_items_count}}</div>
+                                <div class="qty">{{ cart_items_count }}</div>
                             </a>
-                            
                         </div>
                         <!-- /Cart -->
+
+
+
 
                         <!-- Menu Toogle -->
                         <div class="menu-toggle">
