--- a/static_in_env/css/style.css
+++ b/static_in_env/css/style.css
@@ -5,7 +5,7 @@ Author: yaminncco
 Colors:
 	Body 		: #333
 	Headers 	: #2B2D42
-	Primary 	: #D10024
+	Primary 	: #008080
 	Dark 		: #15161D ##1E1F29
 	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
 
@@ -56,7 +56,7 @@ Table OF Contents
 \*----------------------------*/
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Quincy CF";
   font-weight: 400;
   color: #333;
 }
@@ -75,7 +75,7 @@ a {
 }
 
 a:hover, a:focus {
-  color: #D10024;
+  color: #008080;
   text-decoration: none;
   outline: none;
 }
@@ -93,9 +93,9 @@ ul, ol {
 .primary-btn {
   display: inline-block;
   padding: 12px 30px;
-  background-color: #D10024;
+  background-color: #008080;
   border: none;
-  border-radius: 40px;
+  border-radius: 0;
   color: #FFF;
   text-transform: uppercase;
   font-weight: 700;
@@ -177,7 +177,7 @@ textarea.input {
 
 .input-number .qty-up:hover, .input-number .qty-down:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #008080;
 }
 
 /*-- Select input --*/
@@ -257,8 +257,8 @@ textarea.input {
 }
 
 .input-radio input[type="radio"]:checked+label span, .input-checkbox input[type="checkbox"]:checked+label span {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #008080;
+  border-color: #008080;
 }
 
 .input-radio input[type="radio"]:checked+label span:after {
@@ -335,13 +335,13 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: #008080;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
 
 .section-tab-nav li.active a {
-  color: #D10024;
+  color: #008080;
 }
 
 .section-tab-nav li a:hover:after, .section-tab-nav li a:focus:after, .section-tab-nav li.active a:after {
@@ -400,7 +400,7 @@ textarea.input {
 } */
 
 #breadcrumb .breadcrumb-tree li:hover {
-  color: #D10024;
+  color: #008080;
 }
 
 /*=========================================================
@@ -414,7 +414,8 @@ textarea.input {
 #top-header {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #1E1F29;
+  background-color: white;
+  color: Coral !important;
 }
 
 .message.success {
@@ -443,15 +444,15 @@ textarea.input {
 }
 
 .header-links li a {
-  color: #FFF;
+  color: black;
 }
 
 .header-links li a:hover {
-  color: #D10024;
+  color: #008080;
 }
 
 .header-links li i {
-  color: #D10024;
+  color: #008080;
   margin-right: 5px;
 }
 
@@ -462,7 +463,8 @@ textarea.input {
 #header {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #15161D;
+  background-color: white;
+  color: black;
 }
 
 .header-logo {
@@ -488,7 +490,7 @@ textarea.input {
 
 .header-search form .input-select {
   margin-right: -4px;
-  border-radius: 40px 0px 0px 40px;
+  border-radius: 0;
 }
 
 .header-search form .input {
@@ -499,11 +501,11 @@ textarea.input {
 .header-search form .search-btn {
   height: 40px;
   width: 100px;
-  background: #D10024;
+  background: #008080;
   color: #FFF;
   font-weight: 700;
   border: none;
-  border-radius: 0px 40px 40px 0px;
+  border-radius: 0;
 }
 
 /*----------------------------*\
@@ -528,7 +530,7 @@ textarea.input {
   position: relative;
   width: 90px;
   text-align: center;
-  color: #FFF;
+  color: black;
 }
 
 .header-ctn>div>a>i {
@@ -551,7 +553,7 @@ textarea.input {
   border-radius: 50%;
   font-size: 10px;
   color: #FFF;
-  background-color: #D10024;
+  background-color: #008080;
 }
 
 .header-ctn .menu-toggle {
@@ -584,8 +586,8 @@ textarea.input {
 
 .cart .cart-list {
   max-height: 180px;
-  overflow-y: scroll;
-  margin-bottom: 15px;
+  /* overflow-y: scroll; */
+  margin-bottom: 305px;
 }
 
 .cart .cart-list .product-widget {
@@ -615,7 +617,7 @@ textarea.input {
   display: inline-block;
   width: calc(50% - 0px);
   padding: 12px;
-  background-color: #D10024;
+  background-color: #008080;
   color: #FFF;
   text-align: center;
   font-weight: 700;
@@ -645,7 +647,7 @@ textarea.input {
 #navigation {
   background: #FFF;
   border-bottom: 2px solid #E4E7ED;
-  border-top: 3px solid #D10024;
+  border-top: 3px solid #008080;
 }
 
 /*----------------------------*\
@@ -661,7 +663,7 @@ textarea.input {
 }
 
 .main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
-  color: #D10024;
+  color: #008080;
   background-color: transparent;
 }
 
@@ -670,7 +672,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: #008080;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -739,7 +741,20 @@ textarea.input {
   position: relative;
   overflow: hidden;
   margin: 15px 0px;
+  border-radius: 0;
+  animation: bounce 0.5s infinite alternate;
 }
+
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
 
 .shop:before {
   content: "";
@@ -748,7 +763,7 @@ textarea.input {
   bottom: 0;
   left: 0px;
   width: 60%;
-  background: #D10024;
+  background: #008080;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg);
   -ms-transform: skewX(-45deg);
@@ -762,7 +777,7 @@ textarea.input {
   bottom: 0;
   left: 1px;
   width: 100%;
-  background: #D10024;
+  background: #008080;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg) translateX(-100%);
   -ms-transform: skewX(-45deg) translateX(-100%);
@@ -828,11 +843,11 @@ textarea.input {
 .hot-deal .hot-deal-countdown>li {
   position: relative;
   display: inline-block;
-  width: 100px;
-  height: 100px;
-  background: #D10024e6;
+  width: 70px;
+  height: 70px;
+  background: #008080e6;
   text-align: center;
-  border-radius: 50%;
+  border-radius: o;
   margin: 0px 5px;
 }
 
@@ -878,16 +893,33 @@ textarea.input {
 .product {
   position: relative;
   margin: 15px 0px;
-  -webkit-box-shadow: 0px 0px 0px 0px #E4E7ED, 0px 0px 0px 1px #E4E7ED;
-  box-shadow: 0px 0px 0px 0px #E4E7ED, 0px 0px 0px 1px #E4E7ED;
-  -webkit-transition: 0.2s all;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
   transition: 0.2s all;
+  outline: none;
+}
+
+.product:focus {
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 .product:hover {
-  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
-  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
+  /* box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #008080; */
+  transform: translateY(-2px);
+  animation: bounce 0.3s ease-in-out;
 }
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-8px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 
 .product .product-img {
   position: relative;
@@ -912,20 +944,21 @@ textarea.input {
 }
 
 .product .product-img .product-label>span {
-  border: 2px solid;
+  border: none; /* Remove the border property */
   padding: 2px 10px;
   font-size: 9px;
 }
 
+
 .product .product-img .product-label>span.sale {
   background-color: #FFF;
-  border-color: #D10024;
-  color: #D10024;
+  border-color: #008080;
+  color: #008080;
 }
 
 .product .product-img .product-label>span.new {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #008080;
+  border-color: #008080;
   color: #FFF;
 }
 
@@ -953,11 +986,11 @@ textarea.input {
 }
 
 .product .product-body .product-name>a:hover, .product .product-body .product-name>a:focus {
-  color: #D10024;
+  color: #008080;
 }
 
 .product .product-body .product-price {
-  color: #D10024;
+  color: #008080;
   font-size: 18px;
 }
 
@@ -984,7 +1017,7 @@ textarea.input {
 }
 
 .product .product-body .product-rating>i.fa-star {
-  color: #ef233c;
+  color: Coral;
 }
 
 .product .product-body .product-rating:after {
@@ -1013,7 +1046,7 @@ textarea.input {
 
 .product .product-body .product-btns>button:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #008080;
   border-radius: 50%;
 }
 
@@ -1055,8 +1088,8 @@ textarea.input {
   /* background: #1e1f29; */
   text-align: center;
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: #008080;
+  border-color: #008080;
   /* -webkit-transform: translateY(0%);
   -ms-transform: translateY(0%);
   transform: translateY(0%);
@@ -1077,11 +1110,11 @@ textarea.input {
   height: 40px;
   padding: 0 30px;
   /* margin-top: 60px; */
-  background-color: #ef233c;
+  background-color: Coral;
   color: #FFF;
   text-transform: uppercase;
   font-weight: 700;
-  border-radius: 40px;
+  border-radius: 0;
   /* -webkit-transition: 0.2s all;
   transition: 0.2s all; */
 }
@@ -1093,15 +1126,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: #008080;
   opacity: 0;
   /* visibility: hidden; */
 }
 
 /* .product .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: #008080;
+  border-color: #008080;
   padding: 0px 30px 0px 50px;
 } */
 
@@ -1156,12 +1189,12 @@ textarea.input {
 }
 
 .product-widget .product-body .product-name>a:hover, .product-widget .product-body .product-name>a:focus {
-  color: #D10024;
+  color: #008080;
 }
 
 .product-widget .product-body .product-price {
   font-size: 14px;
-  color: #D10024;
+  color: #008080;
 }
 
 .product-widget .product-body .product-price .product-old-price {
@@ -1287,7 +1320,7 @@ textarea.input {
 }
 
 .noUi-connect {
-  background-color: #D10024;
+  background-color: #008080;
 }
 
 .noUi-horizontal {
@@ -1300,7 +1333,7 @@ textarea.input {
   left: -6px;
   top: -4px;
   border: none;
-  background: #D10024;
+  background: #008080;
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 50%;
@@ -1361,12 +1394,12 @@ textarea.input {
 
 .store-grid li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #008080;
 }
 
 .store-grid li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #008080;
+  border-color: #008080;
   color: #FFF;
   cursor: default;
 }
@@ -1399,12 +1432,12 @@ textarea.input {
 
 .store-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #008080;
 }
 
 .store-pagination li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #008080;
+  border-color: #008080;
   color: #FFF;
   font-weight: 500;
   cursor: default;
@@ -1468,7 +1501,7 @@ textarea.input {
 }
 
 #product-imgs .product-preview.slick-current {
-  border-color: #D10024;
+  border-color: #008080;
 }
 
 #product-imgs .slick-prev {
@@ -1518,7 +1551,7 @@ textarea.input {
 }
 
 .product-details .product-rating>i.fa-star {
-  color: #D10024;
+  color: #008080;
 }
 
 .product-details .review-link {
@@ -1530,7 +1563,7 @@ textarea.input {
   font-size: 24px;
   margin-top: 10px;
   margin-bottom: 15px;
-  color: #D10024;
+  color: #008080;
 }
 
 .product-details .product-price .product-old-price {
@@ -1544,7 +1577,7 @@ textarea.input {
   text-transform: uppercase;
   font-weight: 700;
   margin-left: 30px;
-  color: #D10024;
+  color: #008080;
 }
 
 .product-details .product-options {
@@ -1573,13 +1606,29 @@ textarea.input {
   border: 2px solid transparent;
   height: 40px;
   padding: 0 30px;
-  background-color: #ef233c;
+  background-color: Coral;
   color: #FFF;
   text-transform: uppercase;
   font-weight: 700;
-  border-radius: 40px;
+  border-radius: 0;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
+}
+
+.product-details .add-to-cart .add-to-cart-btn:hover {
+  animation: bounce 0.5s infinite alternate;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .product-details .add-to-cart .add-to-cart-btn>i {
@@ -1589,15 +1638,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: #008080;
   opacity: 0;
   /* visibility: hidden; */
 }
 
 /* .product-details .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: #008080;
+  border-color: #008080;
   padding: 0px 30px 0px 50px;
 } */
 
@@ -1687,7 +1736,7 @@ textarea.input {
 }
 
 #product-tab .tab-nav li.active a {
-  color: #D10024;
+  color: #008080;
 }
 
 #product-tab .tab-nav li a:after {
@@ -1695,7 +1744,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: #008080;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -1725,7 +1774,7 @@ textarea.input {
 }
 
 .rating-avg .rating-stars>i.fa-star, .rating .rating-stars>i.fa-star {
-  color: #D10024;
+  color: #008080;
 }
 
 .rating li {
@@ -1743,7 +1792,7 @@ textarea.input {
 }
 
 .rating .rating-progress>div {
-  background-color: #D10024;
+  background-color: #008080;
   position: absolute;
   left: 0;
   top: 0;
@@ -1797,7 +1846,7 @@ textarea.input {
 }
 
 .reviews .review-heading .review-rating>i.fa-star {
-  color: #D10024;
+  color: #008080;
 }
 
 .reviews-pagination {
@@ -1818,12 +1867,12 @@ textarea.input {
 
 .reviews-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #008080;
 }
 
 .reviews-pagination li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #008080;
+  border-color: #008080;
   color: #FFF;
   cursor: default;
 }
@@ -1867,12 +1916,12 @@ textarea.input {
 }
 
 .review-form .input-rating .stars>label:hover:before, .review-form .input-rating .stars>label:hover~label:before {
-  color: #D10024;
+  color: #008080;
 }
 
 .review-form .input-rating .stars>input:checked label:before, .review-form .input-rating .stars>input:checked~label:before {
   content: "\f005";
-  color: #D10024;
+  color: #008080;
 }
 
 /*=========================================================
@@ -1938,7 +1987,7 @@ textarea.input {
 
 .order-summary .order-col .order-total {
   font-size: 24px;
-  color: #D10024;
+  color: #008080;
 }
 
 .order-details .payment-method {
@@ -1956,7 +2005,7 @@ textarea.input {
 
 #newsletter.section {
   border-top: 2px solid #E4E7ED;
-  border-bottom: 3px solid #D10024;
+  border-bottom: 3px solid #008080;
   margin-top: 30px;
 }
 
@@ -1991,18 +2040,19 @@ textarea.input {
 .newsletter form .input {
   width: calc(100% - 160px);
   margin-right: -4px;
-  border-radius: 40px 0px 0px 40px;
+  border-radius: 0;
 }
 
 .newsletter form .newsletter-btn {
   width: 160px;
   height: 40px;
   font-weight: 700;
-  background: #D10024;
+  background: #008080;
   color: #FFF;
   border: none;
-  border-radius: 0px 40px 40px 0px;
+  border-radius: 0;
 }
+
 
 .newsletter .newsletter-follow {
   text-align: center;
@@ -2032,7 +2082,79 @@ textarea.input {
 
 .newsletter .newsletter-follow li a:hover, .newsletter .newsletter-follow li a:focus {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #008080;
+}
+
+
+.signup-section {
+  border-top: 2px solid #E4E7ED;
+  border-bottom: 3px solid #008080;
+  margin-top: 30px;
+}
+
+.signup-form {
+  text-align: center;
+}
+
+.signup-form form {
+  position: relative;
+  max-width: 520px;
+  margin: 30px auto;
+}
+
+.signup-form .form-group {
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.signup-form input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #E4E7ED;
+  transition: box-shadow 0.3s, transform 0.3s;
+}
+
+.signup-form input:focus {
+  outline: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), 0 0 10px rgba(0, 0, 0, 0.1) inset;
+  transform: translateY(-5px);
+}
+
+.signup-form .signup-btn {
+  width: 160px;
+  height: 40px;
+  font-weight: 700;
+  background: #008080;
+  color: #FFF;
+  border: none;
+  border-radius: 0;
+  transition: box-shadow 0.3s, transform 0.3s;
+}
+
+.signup-form .signup-btn:focus {
+  outline: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transform: translateY(-5px);
+}
+
+.signup-form .signup-btn:hover {
+  animation: bounce 0.6s;
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+@media (max-width: 768px) {
+  .signup-form form {
+    padding: 0 15px;
+  }
 }
 
 /*=========================================================
@@ -2070,13 +2192,13 @@ textarea.input {
 
 .footer-links li i {
   margin-right: 15px;
-  color: #D10024;
+  color: #008080;
   width: 14px;
   text-align: center;
 }
 
 .footer-links li a:hover {
-  color: #D10024;
+  color: #008080;
 }
 
 .copyright {
@@ -2116,8 +2238,8 @@ textarea.input {
 }
 
 .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #008080;
+  border-color: #008080;
 }
 
 .slick-prev:before, .slick-next:before {
@@ -2162,7 +2284,7 @@ textarea.input {
 }
 
 .slick-dots li.slick-active button:before {
-  background-color: #D10024;
+  background-color: #008080;
 }
 
 .custom-dots .slick-dots {
