--- a/store/templates/store/head.html
+++ b/store/templates/store/head.html
@@ -8,9 +8,9 @@
 
     <title>Kenstech Support</title>
 
-    <!-- Google font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
-
+    {% comment %} <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet"> {% endcomment %}
+    <link href="//db.onlinewebfonts.com/c/d162a260eb6b9b288f54503ee22aa9ff?family=Quincy+CF" rel="stylesheet" type="text/css"/>
     <!-- Bootstrap -->
     <link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
 
