--- a/static_in_env/css/style.css
+++ b/static_in_env/css/style.css
@@ -420,8 +420,8 @@ textarea.input {
 
 .message.success {
   background-color: #ffffff;
-  color: #2a8e28;
-  border: 1px solid #85c47c;
+  color: #008080;
+  border: 1px solid #24afaf;
   padding: 10px;
   margin-bottom: 10px;
   text-align: center;
@@ -490,12 +490,14 @@ textarea.input {
 
 .header-search form .input-select {
   margin-right: -4px;
+  padding: 0;
   border-radius: 0;
 }
 
 .header-search form .input {
   width: calc(100% - 260px);
   margin-right: -4px;
+  /* padding-left: 40px; */
 }
 
 .header-search form .search-btn {
@@ -2086,88 +2088,202 @@ textarea.input {
 }
 
 
-.signup-section {
-  border-top: 2px solid #E4E7ED;
-  border-bottom: 3px solid #008080;
-  margin-top: 30px;
+/* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap'); */
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
+} */
+
+.login {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  gap: 2px;
+  flex-wrap: wrap;
+  overflow: hidden;
 }
 
-.signup-form {
-  text-align: center;
-}
-
-.signup-form form {
-  position: relative;
-  max-width: 520px;
-  margin: 30px auto;
-}
-
-.signup-form .form-group {
-  position: relative;
-  margin-bottom: 15px;
-}
-
-.signup-form input {
+.login::before {
+  content: '';
+  position: absolute;
   width: 100%;
-  padding: 10px;
-  border: 1px solid #E4E7ED;
-  transition: box-shadow 0.3s, transform 0.3s;
+  height: 100%;
+  background: linear-gradient(#000, #008080, #000);
+  animation: animate 5s linear infinite;
 }
 
-.signup-form input:focus {
-  outline: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), 0 0 10px rgba(0, 0, 0, 0.1) inset;
-  transform: translateY(-5px);
-}
-
-.signup-form .signup-btn {
-  width: 160px;
-  height: 40px;
-  font-weight: 700;
-  background: #008080;
-  color: #FFF;
-  border: none;
-  border-radius: 0;
-  transition: box-shadow 0.3s, transform 0.3s;
-}
-
-.signup-form .signup-btn:focus {
-  outline: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  transform: translateY(-5px);
-}
-
-.signup-form .signup-btn:hover {
-  animation: bounce 0.6s;
-}
-
-@keyframes bounce {
-  0%,
+@keyframes animate {
+  0% {
+    transform: translateY(-100%);
+  }
   100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
+    transform: translateY(100%);
   }
 }
 
-@media (max-width: 768px) {
-  .signup-form form {
-    padding: 0 15px;
+.login span {
+  position: relative;
+  display: block;
+  width: calc(6.25vw - 2px);
+  height: calc(6.25vw - 2px);
+  background: #181818;
+  z-index: 2;
+  transition: 1.5s;
+}
+
+.login span:hover {
+  background: #008080;
+  transition: 0s;
+}
+
+.login .signin {
+  position: absolute;
+  width: 400px;
+  background: #222;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  border-radius: 4px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 9);
+}
+
+.login .signin .content {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.login .signin .content h2 {
+  font-size: 2em;
+  color: #008080;
+  text-transform: uppercase;
+}
+
+.login .signin .content .form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.login .signin .content .form .inputBox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 20px ;
+  color: rgb(164, 149, 149)  ;
+}
+
+.login .signin .content .form .inputBox input {
+  position: relative;
+  width: 100%;
+  background: #333;
+  border: none;
+  outline: none;
+  padding: 25px 10px 7.5px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 1em;
+}
+
+.login .signin .content .form .inputBox i {
+  position: absolute;
+  left: 0;
+  padding: 15px 10px;
+  font-style: normal;
+  color: #aaa;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.signin .content .form .inputBox input:focus ~ i,
+.signin .content .form .inputBox input:valid ~ i {
+  transform: translateY(-7.5px);
+  font-size: 0.8em;
+  color: #fff;
+}
+
+.signin .content .form .links {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.signin .content .form .links a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.signin .content .form .links a:nth-child(2) {
+  color: #008080;
+  font-weight: 600;
+}
+
+.signin .content .form .inputBox input[type="submit"] {
+  padding: 10px;
+  background: #008080;
+  color: #000;
+  font-weight: 600;
+  font-size: 1.35em;
+  letter-spacing: 0.05em;
+  cursor: pointer;
+}
+
+input[type="submit"]:active {
+  opacity: 0.6;
+}
+
+/* Remove background color after autofill */
+.signin .content .form .inputBox input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px #222 inset !important;
+  -webkit-text-fill-color: #fff !important;
+  border-radius: 4px;
+}
+
+
+@media (max-width: 900px) {
+  .login span {
+    width: calc(10vw - 2px);
+    height: calc(10vw - 2px);
   }
 }
+
+@media (max-width: 600px) {
+  .login span {
+    width: calc(20vw - 2px);
+    height: calc(20vw - 2px);
+  }
+}
+
+
 
 /*=========================================================
 	11 -> FOOTER
 ===========================================================*/
 
 #footer {
-  background: #15161D;
-  color: #B9BABC;
+  /* background: #FF7F50; */
+  color: black;
 }
 
 #bottom-footer {
-  background: #1E1F29;
+  background: black;
+  color: #ffffff;
 }
 
 .footer {
@@ -2175,7 +2291,7 @@ textarea.input {
 }
 
 .footer .footer-title {
-  color: #FFF;
+  color: black;
   text-transform: uppercase;
   font-size: 18px;
   /* margin: 0px 0px 30px; */
@@ -2187,7 +2303,7 @@ textarea.input {
 }
 
 .footer-links li a {
-  color: #B9BABC;
+  color: black;
 }
 
 .footer-links li i {
@@ -2201,6 +2317,14 @@ textarea.input {
   color: #008080;
 }
 
+/* Media Query for small screens */
+/* @media (max-width: 767px) {
+  .footer {
+    justify-content: center;
+    text-align: center;
+  }
+} */
+
 .copyright {
   margin-top: 30px;
   display: block;
@@ -2213,7 +2337,7 @@ textarea.input {
 }
 
 .footer-payments li a {
-  color: #15161D;
+  color: #FF7F50;
   font-size: 36px;
   display: block;
 }
