--- a/store/templates/store/new-products.html
+++ b/store/templates/store/new-products.html
@@ -50,7 +50,7 @@
                 <div class="row">
                     {% for product in products %}
                     <!-- product -->
-                    <div class="col-md-3 col-xs-6">
+                    <div class="col-md-3 col-2 col-xs-6">
                         <div class="product">
                             {% if product.images.exists %}
                             <div class="product-img">
