--- a/store/templates/account/signup.html
+++ b/store/templates/account/signup.html
@@ -46,8 +46,8 @@
             {% endif %}
           </div>
           <div class="links">
-            <a href="#">Forgot Password</a>
-            <a href="#">Sign In</a>
+            <a href="{% url 'account_reset_password' %}">Forgot Password</a>
+            <a href="{{ login_url }}">Sign In</a>
           </div>
           <div class="inputBox">
             <input type="submit" value="Sign Up">
